Cutting down on duplicate code. More to do there. Stories now no longer need to be sorted. Instead players are assigned other players and their stories are selected based on author id. Need to return to this and ensure players without assigned stories get to collaborate on other stories. Added logic which ensures duplicate prompt threads don't resolve to multiple stories -- instead, for now, alternate threads are culled based on additions for a single encounter. Added more testing for WHAT_HAPPENS_HERE To vet these new fixes.